--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -8,35 +8,7 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 206.168.190.219
-    port: 2082
-    cipher: auto
-    uuid: e31ca750-71f7-11ee-b920-1239d0255272
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmws
-  - &id002
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: vmess
-    server: 192.203.230.229
-    port: 2052
-    cipher: auto
-    uuid: a4c481f0-1cf1-47b2-bf66-ab563daa29ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /public?ed=2048
-      headers:
-        host: de3.biqibao.site
-  - &id003
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 104.21.75.246
+    server: wnd2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -47,33 +19,61 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: sbl2.shabijichang.com
-  - &id004
-    name: 🇺🇸_US_美国_3
+        host: wnd2.shabijichang.com
+  - &id002
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: trojan
+    server: nl01.lovehjq.xyz
+    port: 41929
+    udp: true
+    password: 09833a6f-4d46-426e-87fe-7793a5489f84
+    skip-cert-verify: true
+    network: tcp
+  - &id003
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: vmess
-    server: 107.167.16.85
-    port: 443
+    server: 120.241.46.222
+    port: 62004
     cipher: auto
-    uuid: 7640a1e7-9701-428e-a4b2-19b3e7dd6f9f
-    alterId: 64
-    tls: true
+    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /path/080822272914
+      path: /dabai.in
       headers:
-        host: www.51109057.xyz
-  - &id005
-    name: 🇵🇰_PK_巴基斯坦
-    type: trojan
-    server: 
-      hk1-reality.fp3kemyh-cm4s-2hak-2gb9-w3534umy2sq5.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
-    udp: true
-    password: 7e23957d-535a-4dc6-9482-e6f44518da87
-    sni: 13-231-155-134.nhost.00cdn.com
+        host: data.db-link02.top
+  - &id004
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
+    type: vmess
+    server: hdlb2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: hdlb2.shabijichang.com
+  - &id005
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: vmess
+    server: 120.241.46.223
+    port: 62014
+    cipher: auto
+    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /dabai.in
+      headers:
+        host: data.db-link02.top
   - &id006
     name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
     type: vmess
@@ -90,67 +90,7 @@ proxies:
       headers:
         host: www.47734647.xyz
   - &id007
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
-    type: vmess
-    server: hdlb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: hdlb2.shabijichang.com
-  - &id008
     name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
-    type: vmess
-    server: 104.26.8.44
-    port: 80
-    cipher: auto
-    uuid: 5180444a-4756-43b4-960b-49eb9052e4e8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: a.109420.xyz
-  - &id009
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 2052
-    cipher: auto
-    uuid: ece26ec7-bcfe-4845-8cf1-3d93abc19ce1
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/nYAwpBbW
-      headers:
-        host: us5a3a71b5c.pkmkwvxqnn.xyz
-  - &id010
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: jd2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 56278a1a-c7cc-459f-b00c-3037e4f99590
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: jd2.shabijichang.com
-  - &id011
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_3
     type: vmess
     server: 104.17.18.26
     port: 80
@@ -164,13 +104,28 @@ proxies:
       path: /
       headers:
         host: a.109420.xyz
-  - &id012
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_4
+  - &id008
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
     type: vmess
-    server: mm2.shabijichang.com
+    server: 120.241.46.222
+    port: 63091
+    cipher: auto
+    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /dabai.in
+      headers:
+        host: data.db-link01.top
+  - &id009
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_3
+    type: vmess
+    server: 104.26.8.44
     port: 80
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: 5180444a-4756-43b4-960b-49eb9052e4e8
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -178,64 +133,20 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mm2.shabijichang.com
-  - &id013
-    name: 🇺🇸_US_美国->🇸🇦_SA_沙特阿拉伯
-    type: vmess
-    server: jd3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: jd3.shabijichang.com
-  - &id014
-    name: 🇩🇪_DE_德国
+        host: a.109420.xyz
+  - &id010
+    name: 🇵🇰_PK_巴基斯坦
     type: trojan
-    server: 3.120.63.163
-    port: 22222
+    server: 
+      us1-reality.fp3kemyh-cm4s-2hak-2gb9-w3534umy2sq5.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
     udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
+    password: a3f221f8-43d6-4363-8624-ce62d3db0202
+    sni: 13-231-155-134.nhost.00cdn.com
     skip-cert-verify: true
     network: tcp
-  - &id015
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: wnd3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wnd3.shabijichang.com
-  - &id016
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: wnd2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wnd2.shabijichang.com
-  - &id017
-    name: 🇺🇸_US_美国_8
+  - &id011
+    name: 🇺🇸_US_美国_2
     type: vmess
     server: 156.225.67.104
     port: 30000
@@ -249,7 +160,147 @@ proxies:
       path: /path/1698239888914
       headers:
         host: www.41758112.xyz
+  - &id012
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
+    type: vmess
+    server: 120.241.46.222
+    port: 61082
+    cipher: auto
+    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /dabai.in
+      headers:
+        host: data.db-link02.top
+  - &id013
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 206.168.190.219
+    port: 2082
+    cipher: auto
+    uuid: e31ca750-71f7-11ee-b920-1239d0255272
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmws
+  - &id014
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 108.181.10.17
+    port: 80
+    cipher: auto
+    uuid: 474e8680-701f-11ee-b436-205c6d5f5d78
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id015
+    name: 🇺🇸_US_美国->🇵🇱_PL_波兰
+    type: vmess
+    server: b62a948c-faa2-4e8a-bf8a-3ff3121c875a.asoul-diana.xyz
+    port: 443
+    cipher: auto
+    uuid: 5f726fe3-d82e-4da5-a711-8af0cbb2b682
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /acetaffy.top
+      headers:
+        host: b62a948c-faa2-4e8a-bf8a-3ff3121c875a.asoul-diana.xyz
+  - &id016
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 104.21.75.246
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id017
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 195.123.240.170
+    port: 41916
+    cipher: auto
+    uuid: 12772df9-485f-413c-edbf-3f562d61de4e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
   - &id018
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: flkf2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: flkf2.shabijichang.com
+  - &id019
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 206.168.190.219
+    port: 8080
+    cipher: auto
+    uuid: e31ca750-71f7-11ee-b920-1239d0255272
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmws
+  - &id020
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_6
+    type: vmess
+    server: 120.241.46.222
+    port: 62001
+    cipher: auto
+    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /dabai.in
+      headers:
+        host: data.db-link01.top
+  - &id021
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    type: vmess
+    server: mrb2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mrb2.shabijichang.com
+  - &id022
     name: 🇨🇳_CN_中国
     type: vmess
     server: 124.220.57.75
@@ -264,6 +315,46 @@ proxies:
       path: /
       headers:
         host: 124.220.57.75
+  - &id023
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_4
+    type: vmess
+    server: mm3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm3.shabijichang.com
+  - &id024
+    name: 🇩🇪_DE_德国
+    type: trojan
+    server: 18.153.153.147
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id025
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
+    type: vmess
+    server: sbl4.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl4.shabijichang.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -308,6 +399,13 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -331,6 +429,13 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
   - name: SELECT
     type: select
     proxies:
@@ -352,6 +457,13 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
