--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -7,71 +7,21 @@ external-controller: 0.0.0.0:9090
 proxies:
   - &id001
     name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 104.18.62.248
-    port: 2052
-    cipher: auto
-    uuid: 664af8e6-2755-40ed-bb4e-2eeecf9b0a60
-    alterId: 0
-    tls: false
+    type: trojan
+    server: z-v1-zzzh.ashx.net
+    port: 443
+    udp: true
+    password: wkmY1R4EcP
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /public?ed=2048
-      headers:
-        host: de1.biqibao.site
+    network: tcp
   - &id002
     name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: 20.kccic2pa.xyz
-    port: 50020
-    cipher: auto
-    uuid: a24d165e-408c-41cb-9997-0fcb012cb138
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
+    type: ss
+    server: bjcu.xzyunjiasu.icu
+    port: 33952
+    password: 5c8b210a-2f00-4292-964b-05281c7ad5d1
+    cipher: aes-256-gcm
   - &id003
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: vmess
-    server: 09.kccic2pa.xyz
-    port: 50009
-    cipher: auto
-    uuid: a24d165e-408c-41cb-9997-0fcb012cb138
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id004
-    name: 🇫🇷_FR_法国_1
-    type: ss
-    server: 51.159.221.231
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id005
-    name: 🇫🇷_FR_法国_2
-    type: ss
-    server: 51.158.37.62
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id006
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 45.199.138.191
-    port: 30000
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1699280099138
-      headers:
-        host: www.42077230.xyz
-  - &id007
     name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
     type: vmess
     server: mm2.shabijichang.com
@@ -86,37 +36,35 @@ proxies:
       path: /
       headers:
         host: mm2.shabijichang.com
-  - &id008
-    name: 🇸🇬_SG_新加坡->🇺🇸_US_美国_1
+  - &id004
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 8.222.198.105
+    server: 95.164.61.27
     port: 80
     cipher: auto
-    uuid: ffffffff-ffff-ffff-ffff-ffffffffffff
+    uuid: 73f51947-ce77-4d19-a652-467863492634
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: il1.xv2ray.net
+  - &id005
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 80.92.205.112
+    port: 443
+    cipher: auto
+    uuid: 4c90ba75-230b-4f8b-bbff-8efa0eb0415f
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-      headers:
-        host: warp.chigua.tk
-  - &id009
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
-    type: vmess
-    server: mrb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mrb2.shabijichang.com
-  - &id010
+  - &id006
     name: 🇺🇸_US_美国->🇧🇷_BR_巴西
     type: vmess
     server: sbl4.shabijichang.com
@@ -131,13 +79,37 @@ proxies:
       path: /
       headers:
         host: sbl4.shabijichang.com
-  - &id011
-    name: 🇸🇬_SG_新加坡->🇺🇸_US_美国_2
+  - &id007
+    name: 🇫🇷_FR_法国_1
+    type: ss
+    server: 162.19.59.162
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id008
+    name: 🇺🇸_US_美国_4
+    type: trojan
+    server: 64.176.162.24
+    port: 443
+    udp: true
+    password: wkmY1R4EcP
+    sni: z-v1-zzzh.ashx.net
+    skip-cert-verify: true
+    network: tcp
+  - &id009
+    name: 🇫🇷_FR_法国_2
+    type: ss
+    server: 162.19.59.161
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id010
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
     type: vmess
-    server: 8.222.235.92
+    server: mrb2.shabijichang.com
     port: 80
     cipher: auto
-    uuid: ffffffff-ffff-ffff-ffff-ffffffffffff
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -145,8 +117,183 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: warp.chigua.tk
+        host: mrb2.shabijichang.com
+  - &id011
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: ss
+    server: 6daayvvf1enzed6v.rongkun.xyz
+    port: 40402
+    password: 01698f7a-7315-49fd-8085-96c288d6b2ac
+    cipher: aes-256-gcm
   - &id012
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: vmess
+    server: 3u1s04.abzoones.xyz
+    port: 36501
+    cipher: auto
+    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: us04.abpilot.xyz
+    network: tcp
+  - &id013
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: vmess
+    server: 3u1s05.abzoones.xyz
+    port: 36506
+    cipher: auto
+    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: us05.abpilot.xyz
+    network: tcp
+  - &id014
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
+    type: vmess
+    server: 3u1s06.abzoones.xyz
+    port: 36511
+    cipher: auto
+    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: us06.abpilot.xyz
+    network: tcp
+  - &id015
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: vmess
+    server: 7i4n04.abzoones.xyz
+    port: 36831
+    cipher: auto
+    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: in04.abpilot.xyz
+    network: tcp
+  - &id016
+    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
+    type: vmess
+    server: 6i2r04.abzoones.xyz
+    port: 36877
+    cipher: auto
+    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: br04.abpilot.xyz
+    network: tcp
+  - &id017
+    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
+    type: vmess
+    server: 2h4u04.abzoones.xyz
+    port: 36864
+    cipher: auto
+    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: hu04.abpilot.xyz
+    network: tcp
+  - &id018
+    name: 🇨🇳_CN_中国->🇦🇷_AR_阿根廷
+    type: vmess
+    server: 9a8r04.abzoones.xyz
+    port: 36861
+    cipher: auto
+    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ar04.abpilot.xyz
+    network: tcp
+  - &id019
+    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
+    type: vmess
+    server: 2t1u04.abzoones.xyz
+    port: 36868
+    cipher: auto
+    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: tr04.abpilot.xyz
+    network: tcp
+  - &id020
+    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚
+    type: vmess
+    server: 5a4u04.abzoones.xyz
+    port: 36821
+    cipher: auto
+    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: au04.abpilot.xyz
+    network: tcp
+  - &id021
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    type: vmess
+    server: 2u3k04.abzoones.xyz
+    port: 36811
+    cipher: auto
+    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: uk04.abpilot.xyz
+    network: tcp
+  - &id022
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
+    type: vmess
+    server: 3d6e04.abzoones.xyz
+    port: 36841
+    cipher: auto
+    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: de04.abpilot.xyz
+    network: tcp
+  - &id023
+    name: 🇨🇳_CN_中国->🇵🇹_PT_葡萄牙
+    type: vmess
+    server: 4p2t01.abzoones.xyz
+    port: 36881
+    cipher: auto
+    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: pt04.abpilot.xyz
+    network: tcp
+  - &id024
+    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
+    type: vmess
+    server: 5c1a04.abzoones.xyz
+    port: 36701
+    cipher: auto
+    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ca04.abpilot.xyz
+    network: tcp
+  - &id025
+    name: 🇨🇳_CN_中国->🇪🇸_ES_西班牙
+    type: vmess
+    server: 6e2s04.abzoones.xyz
+    port: 36884
+    cipher: auto
+    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: es04.abpilot.xyz
+    network: tcp
+  - &id026
     name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
     type: vmess
     server: mm3.shabijichang.com
@@ -161,60 +308,38 @@ proxies:
       path: /
       headers:
         host: mm3.shabijichang.com
-  - &id013
-    name: 🇺🇸_US_美国_2
+  - &id027
+    name: 🇺🇸_US_美国_5
     type: vmess
-    server: sbl2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    server: 172.67.229.36
+    port: 2086
+    cipher: chacha20-poly1305
+    uuid: 58fe1542-5290-40ad-815a-77707a81afe5
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /IOebhLMhl1CTbFHbL95myfRX2
       headers:
-        host: sbl2.shabijichang.com
-  - &id014
-    name: 🇱🇹_LT_立陶宛
-    type: trojan
-    server: 212.24.103.3
-    port: 2053
-    udp: true
-    password: 2228e29d-942a-4ee8-b3c0-f4a846e3f355
+        host: ca6.tehme100.fun
+  - &id028
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 23.227.38.86
+    port: 8080
+    cipher: auto
+    uuid: 969f1909-c0d3-4c30-813d-3aec5c838b7d
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id015
-    name: 🇫🇷_FR_法国_3
-    type: ss
-    server: 162.19.59.165
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id016
-    name: 🇫🇷_FR_法国_4
-    type: ss
-    server: 162.19.59.162
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id017
-    name: 🇫🇷_FR_法国_5
-    type: ss
-    server: 51.158.54.209
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id018
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 85.239.52.174
-    port: 51348
-    password: datdGFe4LkMN710aHedy
-    cipher: chacha20-ietf-poly1305
-  - &id019
-    name: 🇺🇸_US_美国_4
+    network: ws
+    ws-opts:
+      path: /1IKYjV0r/
+      headers:
+        host: dongtaiwang13.dtku47.xyz
+  - &id029
+    name: 🇺🇸_US_美国_6
     type: vmess
     server: 198.41.223.14
     port: 80
@@ -228,14 +353,7 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: ssrsub.v006.ssrsub.com
-  - &id020
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: ss
-    server: bjcu.xzyunjiasu.icu
-    port: 33952
-    password: 5c8b210a-2f00-4292-964b-05281c7ad5d1
-    cipher: aes-256-gcm
-  - &id021
+  - &id030
     name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
     type: vmess
     server: ld2.shabijichang.com
@@ -250,51 +368,6 @@ proxies:
       path: /
       headers:
         host: ld2.shabijichang.com
-  - &id022
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: cf-lt.sharecentre.online
-    port: 80
-    cipher: auto
-    uuid: 3d761afc-6dfd-49d9-9d0f-b79341391f26
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v005.ssrsub.com
-  - &id023
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 104.16.68.38
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 1
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: linkvws
-      headers:
-        host: alvvin.click
-  - &id024
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: cold-dawn-9246.fly.dev
-    port: 443
-    cipher: auto
-    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
-      headers:
-        host: cold-dawn-9246.fly.dev
 proxy-groups:
   - name: PROXY
     type: select
@@ -345,6 +418,12 @@ proxy-groups:
       - *id022
       - *id023
       - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -374,6 +453,12 @@ proxy-groups:
       - *id022
       - *id023
       - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
   - name: SELECT
     type: select
     proxies:
@@ -401,6 +486,12 @@ proxy-groups:
       - *id022
       - *id023
       - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
