--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,65 +6,6 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: trojan
-    server: z-v1-zzzh.ashx.net
-    port: 443
-    udp: true
-    password: wkmY1R4EcP
-    skip-cert-verify: true
-    network: tcp
-  - &id002
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: ss
-    server: bjcu.xzyunjiasu.icu
-    port: 33952
-    password: 5c8b210a-2f00-4292-964b-05281c7ad5d1
-    cipher: aes-256-gcm
-  - &id003
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
-    type: vmess
-    server: mm2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mm2.shabijichang.com
-  - &id004
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 95.164.61.27
-    port: 80
-    cipher: auto
-    uuid: 73f51947-ce77-4d19-a652-467863492634
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: il1.xv2ray.net
-  - &id005
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 80.92.205.112
-    port: 443
-    cipher: auto
-    uuid: 4c90ba75-230b-4f8b-bbff-8efa0eb0415f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id006
     name: 🇺🇸_US_美国->🇧🇷_BR_巴西
     type: vmess
     server: sbl4.shabijichang.com
@@ -79,241 +20,242 @@ proxies:
       path: /
       headers:
         host: sbl4.shabijichang.com
-  - &id007
+  - &id002
     name: 🇫🇷_FR_法国_1
+    type: ss
+    server: 162.19.59.165
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id003
+    name: 🇫🇷_FR_法国_2
     type: ss
     server: 162.19.59.162
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id008
-    name: 🇺🇸_US_美国_4
-    type: trojan
-    server: 64.176.162.24
-    port: 443
-    udp: true
-    password: wkmY1R4EcP
-    sni: z-v1-zzzh.ashx.net
-    skip-cert-verify: true
-    network: tcp
-  - &id009
-    name: 🇫🇷_FR_法国_2
+  - &id004
+    name: 🇫🇷_FR_法国_3
     type: ss
-    server: 162.19.59.161
+    server: 162.19.204.83
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id005
+    name: 🇫🇷_FR_法国_4
+    type: ss
+    server: 37.59.21.132
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id006
+    name: 🇫🇷_FR_法国_5
+    type: ss
+    server: 162.19.204.81
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id007
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: ss
+    server: 5.35.34.107
+    port: 55990
+    password: tOwOyvlXiY5ATJAUOpXNPN
+    cipher: chacha20-ietf-poly1305
+  - &id008
+    name: 🇫🇷_FR_法国_6
+    type: ss
+    server: 57.129.1.20
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id009
+    name: 🇫🇷_FR_法国_7
+    type: ss
+    server: 51.158.200.160
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
   - &id010
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
-    type: vmess
-    server: mrb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mrb2.shabijichang.com
-  - &id011
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    name: 🇫🇷_FR_法国_8
     type: ss
-    server: 6daayvvf1enzed6v.rongkun.xyz
-    port: 40402
-    password: 01698f7a-7315-49fd-8085-96c288d6b2ac
-    cipher: aes-256-gcm
+    server: 146.59.110.240
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id011
+    name: 🇫🇷_FR_法国_9
+    type: ss
+    server: 51.159.222.35
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id012
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: vmess
-    server: 3u1s04.abzoones.xyz
-    port: 36501
-    cipher: auto
-    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us04.abpilot.xyz
-    network: tcp
+    name: 🇫🇷_FR_法国_10
+    type: ss
+    server: 51.158.202.187
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id013
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: vmess
-    server: 3u1s05.abzoones.xyz
-    port: 36506
-    cipher: auto
-    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us05.abpilot.xyz
-    network: tcp
+    name: 🇫🇷_FR_法国_11
+    type: ss
+    server: 51.158.203.4
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id014
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
-    type: vmess
-    server: 3u1s06.abzoones.xyz
-    port: 36511
-    cipher: auto
-    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us06.abpilot.xyz
-    network: tcp
+    name: 🇫🇷_FR_法国_12
+    type: ss
+    server: 51.158.204.70
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id015
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: vmess
-    server: 7i4n04.abzoones.xyz
-    port: 36831
-    cipher: auto
-    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: in04.abpilot.xyz
-    network: tcp
+    name: 🇫🇷_FR_法国_13
+    type: ss
+    server: 57.129.1.21
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id016
-    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
-    type: vmess
-    server: 6i2r04.abzoones.xyz
-    port: 36877
-    cipher: auto
-    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: br04.abpilot.xyz
-    network: tcp
+    name: 🇫🇷_FR_法国_14
+    type: ss
+    server: 51.158.200.49
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id017
-    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
-    type: vmess
-    server: 2h4u04.abzoones.xyz
-    port: 36864
-    cipher: auto
-    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: hu04.abpilot.xyz
-    network: tcp
+    name: 🇫🇷_FR_法国_15
+    type: ss
+    server: 146.59.110.168
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id018
-    name: 🇨🇳_CN_中国->🇦🇷_AR_阿根廷
-    type: vmess
-    server: 9a8r04.abzoones.xyz
-    port: 36861
-    cipher: auto
-    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ar04.abpilot.xyz
-    network: tcp
+    name: 🇫🇷_FR_法国_16
+    type: ss
+    server: 51.158.200.45
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id019
-    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
-    type: vmess
-    server: 2t1u04.abzoones.xyz
-    port: 36868
-    cipher: auto
-    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tr04.abpilot.xyz
-    network: tcp
+    name: 🇫🇷_FR_法国_17
+    type: ss
+    server: 51.158.200.50
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id020
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚
-    type: vmess
-    server: 5a4u04.abzoones.xyz
-    port: 36821
-    cipher: auto
-    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: au04.abpilot.xyz
-    network: tcp
+    name: 🇫🇷_FR_法国_18
+    type: ss
+    server: 51.158.202.188
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id021
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: vmess
-    server: 2u3k04.abzoones.xyz
-    port: 36811
-    cipher: auto
-    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: uk04.abpilot.xyz
-    network: tcp
+    name: 🇫🇷_FR_法国_19
+    type: ss
+    server: 141.95.126.100
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id022
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
-    type: vmess
-    server: 3d6e04.abzoones.xyz
-    port: 36841
-    cipher: auto
-    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: de04.abpilot.xyz
-    network: tcp
+    name: 🇫🇷_FR_法国_20
+    type: ss
+    server: 51.158.203.2
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id023
-    name: 🇨🇳_CN_中国->🇵🇹_PT_葡萄牙
-    type: vmess
-    server: 4p2t01.abzoones.xyz
-    port: 36881
-    cipher: auto
-    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: pt04.abpilot.xyz
-    network: tcp
+    name: 🇫🇷_FR_法国_21
+    type: ss
+    server: 51.158.200.161
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id024
-    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
+    name: 🇩🇪_DE_德国_1
     type: vmess
-    server: 5c1a04.abzoones.xyz
-    port: 36701
+    server: 5.78.70.196
+    port: 3389
     cipher: auto
-    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ca04.abpilot.xyz
-    network: tcp
-  - &id025
-    name: 🇨🇳_CN_中国->🇪🇸_ES_西班牙
-    type: vmess
-    server: 6e2s04.abzoones.xyz
-    port: 36884
-    cipher: auto
-    uuid: 19881474-b3da-45e7-a99b-9afdafecb10a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: es04.abpilot.xyz
-    network: tcp
-  - &id026
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
-    type: vmess
-    server: mm3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mm3.shabijichang.com
-  - &id027
-    name: 🇺🇸_US_美国_5
+    network: http
+  - &id025
+    name: 🇩🇪_DE_德国_2
     type: vmess
-    server: 172.67.229.36
+    server: poshtibani.chixixchi.com
+    port: 53298
+    cipher: auto
+    uuid: 166bdbd6-098f-4372-fec4-686e8c8d1ce8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id026
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 5.161.87.31
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id027
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 5.161.106.178
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id028
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 5.161.86.165
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id029
+    name: 🇧🇷_BR_巴西
+    type: vmess
+    server: 186.233.119.107
+    port: 41815
+    cipher: auto
+    uuid: f49a5dfc-2644-4b4e-e1f0-f2aa31e52dcb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id030
+    name: 🇬🇧_GB_英国
+    type: trojan
+    server: 18.169.150.213
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id031
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 14.vmessprotocol.telegram-vmessprotocol-channel.space
     port: 2086
-    cipher: chacha20-poly1305
+    cipher: auto
     uuid: 58fe1542-5290-40ad-815a-77707a81afe5
     alterId: 0
     tls: false
@@ -323,38 +265,8 @@ proxies:
       path: /IOebhLMhl1CTbFHbL95myfRX2
       headers:
         host: ca6.tehme100.fun
-  - &id028
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 23.227.38.86
-    port: 8080
-    cipher: auto
-    uuid: 969f1909-c0d3-4c30-813d-3aec5c838b7d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /1IKYjV0r/
-      headers:
-        host: dongtaiwang13.dtku47.xyz
-  - &id029
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 198.41.223.14
-    port: 80
-    cipher: auto
-    uuid: 3d761afc-6dfd-49d9-9d0f-b79341391f26
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v006.ssrsub.com
-  - &id030
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
+  - &id032
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
     server: ld2.shabijichang.com
     port: 80
@@ -368,6 +280,34 @@ proxies:
       path: /
       headers:
         host: ld2.shabijichang.com
+  - &id033
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: mm3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm3.shabijichang.com
+  - &id034
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 80.92.205.112
+    port: 443
+    cipher: auto
+    uuid: 4c90ba75-230b-4f8b-bbff-8efa0eb0415f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
 proxy-groups:
   - name: PROXY
     type: select
@@ -424,6 +364,10 @@ proxy-groups:
       - *id028
       - *id029
       - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -459,6 +403,10 @@ proxy-groups:
       - *id028
       - *id029
       - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
   - name: SELECT
     type: select
     proxies:
@@ -492,6 +440,10 @@ proxy-groups:
       - *id028
       - *id029
       - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
